Finished JH page, started RSVPd page

--- a/index.html
+++ b/index.html
@@ -57,20 +57,20 @@
           
           <div class="project section" style="margin-top: 18vh">
           <div id="secondary-title">FEATURED PROJECTS</div>
-            <a href="justharvest.html"><img src="pics/" class="project-pic" style="opacity:1"></a>
+            <a href="justharvest.html"><img src="pics/jh.png" class="project-pic" style="opacity:1; background-color: #f9f59c"></a>
             <div class="caption">
               <div class="project-title">Just Harvest Community Table</div>
-              [Text describing what I did for Just Harvest]
-              <a href="justharvest.html" class="learn-more" style="background-color: rgb(24,163,152); color: white"> LEARN MORE</a>
+              A service solution that mututally benefits the nonprofit Just Harvest and the food insecure individuals it serves.
+              <a href="justharvest.html" class="learn-more" style="background-color: #f9f59c; color: black"> LEARN MORE</a>
             </div>
           </div>
 
         <div class="project section">
-          <a href="rsvpd.html"><img src="pics/" class="project-pic"></a>
+          <a href="rsvpd.html"><img src="pics/rsvpd.png" class="project-pic" style="background-color: #ff943a"></a>
           <div class="caption">
             <div class="project-title">RSVPd</div>
             [Text describing RSVPd]
-            <a href="rsvpd.html" class="learn-more" style="background-color: #33312E; color: white"> LEARN MORE</a>
+            <a href="rsvpd.html" class="learn-more" style="background-color: #ff943a; color: white"> LEARN MORE</a>
           </div>
         </div>
 
@@ -78,7 +78,7 @@
             <a href="l&d.html"><img  src="pics/l&d.jpg" class="project-pic" style="opacity:1"></a>
             <div class="caption">
               <div class="project-title">Learning & Development Portal</div>
-              Redesigned the internal Learning & Development portal, a site through which practitioners request continuing education programs. Conducted user and stakeholder interviews, synthesized research, redesigned the business process, and created wireframes and high fidelity prototypes.
+              Redesigned the internal Learning & Development portal, a site through which practitioners request continuing education programs.
               <a href="l&d.html" class="learn-more" style="background-color: #49ce5c; color: white"> LEARN MORE</a>
             </div>
           </div>
