--- a/justharvest.html
+++ b/justharvest.html
@@ -35,42 +35,39 @@
 	
 	  	<div class="page-title">Just Harvest Community Table</div>
 	  	<div class="project-info">Spring 2019 | Service Design </div>
-	  	<img src="pics/l&d/requests.jpg" class="big-pic">
+	  	<img src="pics/justharvest/cover.jpg" class="big-pic">
+
 	  	<div id="justharvest" class="margin-medium">
 
-	  	<div class="content">
+	  	<div class="content"> 
+			
 			<div class="context-summary">
-			<div class="context-title">Context</div>
-				I worked on this project through Service Design, an elective class in the HCI program. In this class, we learned to define and study services and data-driven product service systems and the basics of envisioning and designing them. The class culminated in a final client project. We partnered with <a href="https://www.justharvest.org/">Just Harvest</a>, a local nonprofit that works to fight hunger in Allegheny County through advocacy, education, and community outreach.</p>
-				<p>
-				As a class, we were tasked with understanding the current social, economic, and technological factors surrounding access to government programs. Each team took a unique stance on developing new services, apps, and platforms that leverage Just Harvest’s expertise in reducing food insecurity.
-				</p>
+				<div class="context-title">Context</div> 
+					<p>
+					I worked on this project through Service Design, an elective class in the HCI program. In this class, we learned to define and study services and data-driven product service systems and the basics of envisioning and designing them. The class culminated in a final client project. We partnered with <a href="https://www.justharvest.org/">Just Harvest</a>, a local nonprofit that works to fight hunger in Allegheny County through advocacy, education, and community outreach.</p>
+					<p>
+					As a class, we were tasked with understanding the current social, economic, and technological factors surrounding access to government aid programs. Each team took a unique stance on developing a new services, app, or platform that leverages Just Harvest’s expertise in reducing food insecurity.
+					</p>
 			</div>
 			
 			<div class="context-specifics">
 				<div class="context-subtitle">Team</div>
 					<div class="context-description">
-					I worked on a multi-disciplinary team of 5: the four other students were pursuing master degrees either in the HCI program and Integrated Innovation Institute
-				</div>
+						I worked on a multi-disciplinary team of 5: the four other students were pursuing master degrees either in the HCI program and Integrated Innovation Institute
+					</div>
 				<div class="context-subtitle">Skills/Tools</div> 
-					<div class="context-description">User Research, Storyboarding, Conceptual Modeling, Value Flows, Service Blueprinting, Stakeholder Mapping, Service Enactment (Experience Prototyping)
-				</div>
+					<div class="context-description">
+						User Research, Storyboarding, Conceptual Modeling, Value Flows, Service Blueprinting, Stakeholder Mapping, Service Enactment (Experience Prototyping)
+					</div>
 			</div>
 	  	</div>
 
-	  	<div id="secondary-pics">
-			<img class="pics-2" src="pics/justharvest/potluck.jpg">
-			<img class="pics-2" src="pics/justharvest/foodbox.jpg">
-		</div>
-
-		  	<div class="process-title">Project Overview</div>
+		  	<div class="process-title last">Project Overview: The Challenge & Our Solution</div>
 		  	<div class="panel">
-		  		<p>
-		  		Just Harvest is limited by their resources and the strict government guidelines they must work within. They need a service solution that leverages the community without creating more work for them. A solution we offered was to host reocurring commnunity potlucks, led by resident leaders within their own neighborhoods and facilitated and attended by Just Harvest staff. These community-embedded meals allow support networks to grow where they are needed most. Food insecure individuals can find support and solace and Just Harvest gains insight into community needs.	
+		  		<p>As a nonprofit organization, Just Harvest faces several challenges. Primarily, they are limited by their resources: their small staff and high volunteer turnover, along with the strict government guidelines they must work within. They need a service solution that leverages the community without creating more work for them.</p>
+		  		<p>A mutually beneficial solution we offered was to host recurring community potlucks. Eventually, resident leaders would run these events within their own neighborhoods and Just Harvest staff would attend and facilitate them. These community-embedded meals allow support networks to grow where they are needed most. They offer aid in the form food <i>and</i> community. At the same time, Just Harvest gains insight into community needs through semi-directed conversation. These events also serve as a space for Just Harvest to advertise their other services and connect with new clients.
 		  		</p>
-		  		<p>
-		  		This project was broken into a research phase, an ideation phase, and a prototyping phase. 
-		  		</p>
+		  		<p>This project was broken into a research phase, an ideation phase, and a prototyping phase.</p>
 		  	</div>
 
 		  	<div class="process-title">Research</div>
@@ -92,41 +89,78 @@
 
 		  	<div class="process-title">Ideation</div>
 		  	<div class="panel">
-		  	<img src="pics/justharvest/storyboard.png" class="med-pic">
-		  	<div class="inner-text">
-		  		Our ideation centered around storyboarding and speed dating those storyboards with Just Harvest staff. This is one example. View the rest of the storyboards <a href="https://docs.google.com/presentation/d/1vDT-bOKurMmTtGp2Aeml4jz08RB47yaD_vlvKuGoNAI/edit?usp=sharing">here.</a>
-		  	</div>
-		  	<p></p>
-		  	<img src="pics/justharvest/impact.png" class="med-pic">
-		  	<div class="inner-text">
-		  		We took the feedback we received from Just Harvest staff and plotted our ideas based on their potential impact and ease of implementation. The goal was to sit in the top-right quadrant. Clearly, nothing came close - so we went back to the drawing board. We came up with the community potluck idea during another brainstorming session.
-		  	</div>
-		  	<p></p>
-		  	<img src="pics/justharvest/flow.png" class="med-pic">
-		  	<div class="inner-text">
-		  		This was the original flow we provided.
-		  	</div>
+			  	<img src="pics/justharvest/storyboard.png" class="med-pic">
+			  	<div class="inner-text">
+			  		Our ideation centered around storyboarding and speed dating those storyboards with Just Harvest staff. This is one example. View the rest of the storyboards <a href="https://docs.google.com/presentation/d/1vDT-bOKurMmTtGp2Aeml4jz08RB47yaD_vlvKuGoNAI/edit?usp=sharing">here.</a>
+			  	</div>
+			  	<p></p>
+			  	<img src="pics/justharvest/impact.png" class="med-pic">
+			  	<div class="inner-text">
+			  		We took the feedback we received from Just Harvest staff and plotted our ideas based on their potential impact and ease of implementation. The goal was to sit in the top-right quadrant. Clearly, nothing came close - so we went back to the drawing board. We came up with the community potluck idea during another brainstorming session.
+			  	</div>
+			  	<p></p>
+			  	<img src="pics/justharvest/flow.png" class="med-pic">
+			  	<div class="inner-text">
+			  		After identifying a community potluck event as our top idea, we created a brief flow.
+			  	</div>
 		  	</div>
 
 		  	<div class="process-title">Prototyping & Delivery</div>
-		  	<div class="panel">
-		  	<img src="pics/justharvest/serviceblueprint.png" class="med-pic">
-		  	<div class="inner-text">
-		  		Text tex text
-		  	</div>
-		  	</div>
+		  		<div class="panel">
+				  	<p>To validate our final solution and help refine the service model, we held an experiential prototyping session. We invited members of the Just Harvest staff to campus, brought food, and had a potluck. To facilitate discussion, we created the "Convo Pot," a set of conversation starter cards that each had a different question. These cards are completely customizable for future use, and could be themed seasonally or based on the audience. Here were some of ours:
+				  	<li>What are some of your favorite healthy recipes?</li>
+				  	<li>What are you looking forward to right now?</li>
+				  	<li>What is your favorite thing about your neighborhood?</li>
+				  	<li>What do you worry about?</li>
+				  	<li>If you could have a lifetime supply of any one food, what would you choose?</li>
+				  	</p>
 
-		  	<a href="zensors.html" class="next-project" style="background-color: #49ce5c; float: right"> 
-		  		ZENSORS
+				  	<div id="secondary-pics" style="margin-bottom: 30px">
+						<img class="pics-2" src="pics/justharvest/potluck.jpg">
+						<img class="pics-2" src="pics/justharvest/foodbox.jpg">
+					</div>
+
+				  	<img src="pics/justharvest/serviceblueprint.png" class="med-pic">
+				  	<div class="inner-text">
+				  		After receiving positive feedback from Just Harvest, the team fleshed out our proposed flow into a Service Blueprint. A Service Blueprint serves the same purpose as a Customer Journey Map would for a product, but incorporates additional swim lanes like "Front Stage" and "Back Stage." These parallel lanes describe the journey of all members of the service team.
+				  		<p>Creating a service blueprint helped us identify any potential problem areas for our community potluck idea.</p> 
+				  	</div>
+
+				  	<img src="pics/justharvest/valueflow.jpg" class="med-pic">
+				  	<div class="inner-text">
+				  		We also developed this value flow to document that each entity involved in this service would receive some tangible benefit. Of course, the main users we are trying to help are food insecure individuals. However, this idea involves other community resources who will also benefit.
+				  	</div>
+				</div>
+
+		  	<div class="process-title">Outcomes</div>
+		  	<div class="panel">
+		  		<p>Given our research, prototyping session, and positive feedback from our client, we believe that this idea has the potential to: </p>
+			  	<li><b>Increase community outreach for Just Harvest.</b> Help Just Harvest collect information about what is happening on the ground throughout Allegheny County and identify desired services.
+				</li>
+				<p></p>
+			  	<li><b>Improve allocation of food resources to people who are food insecure.</b> Partner with food advocacy NGOs to provide food and healthy meals, with instructions on how to recreate it at home.
+				</li>
+				<p></p>
+			  	<li><b>Grow support networks.</b>Connect food insecure individuals to each other, to services like Just Harvest, and to sympathetic volunteers to create networks of encouragement and understanding.
+				</li>
+				<p></p>
+			  	<li><b>Empower community leaders.</b>Just Harvest provides support and training for community members to build positive environments and experiences that can strengthen ties and relationships.
+				</li>
+			</div>
+
+		  	<a href="l&d.html" class="next-project" style="background-color: #f9f59c; color: black; float: right"> 
+		  		L&D PORTAL
 		  		<i class="fa fa-caret-right"></i>
 		  	</a>
 
-		  	<a href="atlantis.html" class="next-project" style="background-color: #49ce5c; float: left"> 
+		  	<a href="rsvpd.html" class="next-project" style="background-color: #f9f59c; color: black; float: left"> 
 		  		<i class="fa fa-caret-left"></i>
-		  		ATLANTIS HUB
+		  		RSVPD
 		  	</a>
+		  	</div>
 	  	</div>
   	</div>
+
   	<div id="footer"></div>
   	</meta>
   </body>
