--- a/rsvpd.html
+++ b/rsvpd.html
@@ -5,7 +5,7 @@
     <title>Emily Porat | RSVPd</title>
     <link rel="stylesheet" type="text/css" href="styles/global2.css">
     <link rel="stylesheet" type="text/css" href="styles/nav.css">
-    <link rel="stylesheet" type="text/css" href="styles/l&d.css">
+    <link rel="stylesheet" type="text/css" href="styles/rsvpd.css">
     <link rel="stylesheet" type="text/css" href="styles/contact.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <link rel="shortcut icon" type="image/x-icon" href="pics/favicon.ico" />
@@ -35,37 +35,55 @@
 	
 	  	<div class="page-title">RSVPd</div>
 	  	<div class="project-info">
-	  		Fall 2018 | Information Systems Capstone Project 
+	  		Fall 2018 | Information Systems Capstone Project | <a href="https://sketch.cloud/s/GJGWD">Wires</a>
 	  	</div>
-	  	<img src="pics/l&d/requests.jpg" class="big-pic">
+	  	<img src="pics/rsvpd/cover.png" class="big-pic" style="background-color: #ff943a">
 	  	<div id="ld" class="margin-medium">
 
 	  	<div class="content">
 			<div class="context-summary">
 			<div class="context-title">Context</div>
-				[Context text]
+				<p>
+				I completed this project through the Innovation in Information Systems course. The purpose of this capstone class was to teach us how innovation works: to identify a real problem or business need and apply structured tools in order to solve it. Through the project section of the class, teams worked to identify a problem and develop a minimum viable product (MVP) that solves it.
 				</p>
+				<p>
+				Our team focused on the problem of attendance at group events. It's a universal issue: people say they'll attend an event, and most of the time, at least a portion of the attendees don't show up. The bigger the event, the bigger the problem. When friends flake, event organizers lose resources, time, and money. Our mobile app, RSVPd, serves to solve this problem by providing predictability, motivation, and accountability. We built out the MVP with Proto.IO, which allowed us to capture user input and display it (unlike most other prototyping tools).
+				</p>
+
 
 			</div>
 			
 			<div class="context-specifics">
 				<div class="context-subtitle">Team</div>
 					<div class="context-description">
-					[Team]</div>
+					My teammates were two other IS seniors. I was the lead designer.</div>
 				<div class="context-subtitle">Skills</div> 
-					<div class="context-description">[]</div>
+					<div class="context-description">User Research, Data Analysis, Affinity Mapping, Product Visioning, User Stories, Usability Testing, Wireframing, Prototyping, Presenting</div>
 				<div class="context-subtitle">Tools</div> 
-					<div class="context-description">[]</div>
+					<div class="context-description">Sketch, Adobe InDesign, Proto.IO, PowerPoint</div>
 			</div>
+
+
+		  	<div class="process-title last"></div>
+		  	<div class="panel">
+		  		
+			  	<img src="pics/rsvpd/process.png" class="med-pic">
+			  	<div class="inner-text">
+			  		The project was broken up into three phases over the semester. 
+			  	</div>
+
+
+		  	</div>
+
 	  	</div>
-		  	<a href="zensors.html" class="next-project" style="background-color: #49ce5c; float: right"> 
-		  		NEXT PROJ
+		  	<a href="justharvest.html" class="next-project" style="background-color: #ff943a; float: right"> 
+		  		COMMUNITY TABLE
 		  		<i class="fa fa-caret-right"></i>
 		  	</a>
 
-		  	<a href="atlantis.html" class="next-project" style="background-color: #49ce5c; float: left"> 
+		  	<a href="atlantis.html" class="next-project" style="background-color: #ff943a; float: left"> 
 		  		<i class="fa fa-caret-left"></i>
-		  		LAST PROJ
+		  		ATLANTIS HUB
 		  	</a>
 	  	</div>
   	</div>
