--- a/upark.html
+++ b/upark.html
@@ -59,7 +59,7 @@
 					</div>
 				<div class="subheader2">Skills</div> 
 					<div class="context-description">
-						Personas, Scenarios, Storyboarding, Wireraming, Prototyping, Presenting
+						Personas, Scenarios, Storyboarding, Wireframing, Prototyping, Presenting
 					</div>
 				<div class="subheader2">Tools</div> 
 					<div class="context-description">
