--- a/rsvpd.html
+++ b/rsvpd.html
@@ -49,7 +49,7 @@
 				<p>
 				Our team focused on the problem of attendance at group events. It's a universal issue: people say they'll attend an event, and most of the time, at least a portion of the attendees don't show up. The bigger the event, the bigger the problem. When friends flake, event organizers lose resources, time, and money. Our mobile app, RSVPd, serves to solve this problem by providing predictability, motivation, and accountability. We built out the MVP with Proto.IO, which allowed us to capture user input and display it (unlike most other prototyping tools).
 				</p>
-
+				<p>The project was broken up into three phases over the semester: </p>
 
 			</div>
 			
@@ -63,15 +63,14 @@
 					<div class="context-description">Sketch, Adobe InDesign, Proto.IO, PowerPoint</div>
 			</div>
 
-
-		  	<div class="process-title last"></div>
 		  	<div class="panel">
 		  		
 			  	<img src="pics/rsvpd/process.png" class="med-pic">
-			  	<div class="inner-text">
-			  		The project was broken up into three phases over the semester. 
-			  	</div>
 
+			  	<div class="process-title last">More information on this project coming soon!</div>
+			  	For now, check out the slides from the team's final presentation below. It includes a detailed appendix.
+
+				<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQCrvVdJKB3lCbo1kU7gy_lieHZ2B7ISbOZktJLMs5zDLpi0fvs-0C0X4GSrqCrqqTjozlJu8ELRJbW/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
 		  	</div>
 
