changed rsvpd photo

--- a/atlantis.html
+++ b/atlantis.html
@@ -166,8 +166,8 @@
 				<p>4) Icons are used for easy identification of transport methods.</p>
 			  </div>
 			</div>
-		  	<a href="l&d.html" class="next-project" style="background-color: #FEE469; float: right; color: black"> 
-		  		L&D PORTAL
+		  	<a href="justharvest.html" class="next-project" style="background-color: #FEE469; float: right; color: black"> 
+		  		COMMUNITY TABLE
 		  		<i class="fa fa-caret-right"></i>
 		  	</a>
 
