--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <a href="rsvpd.html"><img src="pics/rsvpd.png" class="project-pic" style="background-color: #ff943a"></a>
           <div class="caption">
             <div class="project-title">RSVPd</div>
-            [Text describing RSVPd]
+             A mobile app that helps event planners by providing predictability, motivation, and accountability.
             <a href="rsvpd.html" class="learn-more" style="background-color: #ff943a; color: white"> LEARN MORE</a>
           </div>
         </div>
