--- a/justharvest.html
+++ b/justharvest.html
@@ -148,14 +148,14 @@
 				</li>
 			</div>
 
-		  	<a href="l&d.html" class="next-project" style="background-color: #f9f59c; color: black; float: right"> 
-		  		L&D PORTAL
+		  	<a href="rsvpd.html" class="next-project" style="background-color: #f9f59c; color: black; float: right"> 
+		  		RSVPD
 		  		<i class="fa fa-caret-right"></i>
 		  	</a>
 
-		  	<a href="rsvpd.html" class="next-project" style="background-color: #f9f59c; color: black; float: left"> 
+		  	<a href="atlantis.html" class="next-project" style="background-color: #f9f59c; color: black; float: left"> 
 		  		<i class="fa fa-caret-left"></i>
-		  		RSVPD
+		  		ATLANTIS HUB
 		  	</a>
 		  	</div>
 	  	</div>
