--- a/l&d.html
+++ b/l&d.html
@@ -268,9 +268,9 @@
 		  		<i class="fa fa-caret-right"></i>
 		  	</a>
 
-		  	<a href="atlantis.html" class="next-project" style="background-color: #49ce5c; float: left"> 
+		  	<a href="rsvpd.html" class="next-project" style="background-color: #49ce5c; float: left"> 
 		  		<i class="fa fa-caret-left"></i>
-		  		ATLANTIS HUB
+		  		RSVPD
 		  	</a>
 	  	</div>
   	</div>
