--- a/rsvpd.html
+++ b/rsvpd.html
@@ -75,14 +75,14 @@
 		  	</div>
 
 	  	</div>
-		  	<a href="justharvest.html" class="next-project" style="background-color: #ff943a; float: right"> 
-		  		COMMUNITY TABLE
+		  	<a href="l&d.html" class="next-project" style="background-color: #ff943a; float: right"> 
+		  		L&D PORTAL
 		  		<i class="fa fa-caret-right"></i>
 		  	</a>
 
-		  	<a href="atlantis.html" class="next-project" style="background-color: #ff943a; float: left"> 
+		  	<a href="justharvest.html" class="next-project" style="background-color: #ff943a; float: left"> 
 		  		<i class="fa fa-caret-left"></i>
-		  		ATLANTIS HUB
+		  		COMMUNITY TABLE
 		  	</a>
 	  	</div>
   	</div>
