--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <a href="l&d.html"><img  src="pics/l&d.jpg" class="project-pic" style="opacity:1"></a>
             <div class="caption">
               <div class="project-title">Learning & Development Portal</div>
-              Redesigned the internal Learning & Development portal, a site through which practitioners request continuing education programs.
+              A website through which employees request continuing education programs.
               <a href="l&d.html" class="learn-more" style="background-color: #49ce5c; color: white"> LEARN MORE</a>
             </div>
           </div>
