--- a/justharvest.html
+++ b/justharvest.html
@@ -117,7 +117,7 @@
 
 				  	<div id="secondary-pics" style="margin-bottom: 30px">
 						<img class="pics-2" src="pics/justharvest/potluck.jpg">
-						<img class="pics-2" src="pics/justharvest/foodbox.jpg">
+						<img class="pics-2" src="pics/justharvest/foodbox.JPG">
 					</div>
 
 				  	<img src="pics/justharvest/serviceblueprint.png" class="med-pic">
