added new resume

--- a/justharvest.html
+++ b/justharvest.html
@@ -65,7 +65,7 @@
 		  	<div class="process-title last">Project Overview: The Challenge & Our Solution</div>
 		  	<div class="panel">
 		  		<p>As a nonprofit organization, Just Harvest faces several challenges. Primarily, they are limited by their resources: their small staff and high volunteer turnover, along with the strict government guidelines they must work within. They need a service solution that leverages the community without creating more work for them.</p>
-		  		<p>A mutually beneficial solution we offered was to host recurring community potlucks. Eventually, resident leaders would run these events within their own neighborhoods and Just Harvest staff would attend and facilitate them. These community-embedded meals allow support networks to grow where they are needed most. They offer aid in the form food <i>and</i> community. At the same time, Just Harvest gains insight into community needs through semi-directed conversation. These events also serve as a space for Just Harvest to advertise their other services and connect with new clients.
+		  		<p>A mutually beneficial solution we offered was to host recurring community potlucks. Eventually, resident leaders would run these events within their own neighborhoods and Just Harvest staff would attend and facilitate them. These community-embedded meals allow support networks to grow where they are needed most. They offer aid in the form of food <i>and</i> community. At the same time, Just Harvest gains insight into community needs through semi-directed conversation. These events also serve as a space for Just Harvest to advertise their other services and connect with new clients.
 		  		</p>
 		  		<p>This project was broken into a research phase, an ideation phase, and a prototyping phase.</p>
 		  	</div>
