--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <a href="justharvest.html"><img src="pics/jh.png" class="project-pic" style="opacity:1; background-color: #f9f59c"></a>
             <div class="caption">
               <div class="project-title">Just Harvest Community Table</div>
-              A service solution that mututally benefits the nonprofit Just Harvest and the food insecure individuals it serves.
+              A service solution that mutually benefits the nonprofit Just Harvest and the food insecure individuals it serves.
               <a href="justharvest.html" class="learn-more" style="background-color: #f9f59c; color: black"> LEARN MORE</a>
             </div>
           </div>
