changed about pic

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 
       <div id="about">
           <div id="about-title">ABOUT EMILY</div>
-          <img src="pics/emily.jpg" id="about-pic">
+          <img src="pics/emily3.jpg" id="about-pic">
           
           <div id="about-description">
             Hi there! If you want to know a little bit more about me, you’ve come to the right place. I'm originally from Mountain View, California, but I went to Carnegie Mellon in search of the East Coast experience. Little did I know, Pittsburgh is closer to Ohio than New York - but it's all good, we've got good pierogies.
