changed fb to insta

--- a/footer.html
+++ b/footer.html
@@ -8,7 +8,7 @@
       | 
       <a href="https://github.com/emilyporat/">GitHub</a>
       |
-      <a href="https://www.facebook.com/emily.porat">Facebook</a>
+      <a href="https://www.instagram.com/emilyporat.eats/">Insta</a>
     </div>
   </div>
   <div id="copyright">© Emily Porat 2019</div>
