added archive and updated up arrow style

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
           
           <div class="project section" style="margin-top: 18vh">
           <div id="secondary-title">FEATURED PROJECTS</div>
-            <a href="justharvest.html"><img src="pics/jh.png" class="project-pic" style="opacity:1; background-color: #f9f59c"></a>
+            <a href="justharvest.html"><img src="pics/jh.png" class="project-pic" style="opacity:1; background-color: #7bbc23"></a>
             <div class="caption">
               <div class="project-title">Just Harvest Community Table</div>
               A service solution that mutually benefits the nonprofit Just Harvest and the food insecure individuals it serves.
-              <a href="justharvest.html" class="learn-more" style="background-color: #f9f59c; color: black"> LEARN MORE</a>
+              <a href="justharvest.html" class="learn-more" style="background-color: #7bbc23; color: black"> LEARN MORE</a>
             </div>
           </div>
 
