redesigned archive page

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="caption">
               <div class="project-title">Just Harvest Community Table</div>
               A service solution that mutually benefits the nonprofit Just Harvest and the food insecure individuals it serves.
-              <a href="justharvest.html" class="learn-more" style="background-color: #7bbc23; color: black"> LEARN MORE</a>
+              <a href="justharvest.html" class="learn-more" style="background-color: #7bbc23; color: white"> LEARN MORE</a>
             </div>
           </div>
 
@@ -69,7 +69,7 @@
           <a href="rsvpd.html"><img src="pics/rsvpd.png" class="project-pic" style="background-color: #ff943a"></a>
           <div class="caption">
             <div class="project-title">RSVPd</div>
-             A mobile app that helps event planners by providing predictability, motivation, and accountability.
+             A mobile app that helps event planners predict attendance by providing predictability, motivation, and accountability.
             <a href="rsvpd.html" class="learn-more" style="background-color: #ff943a; color: white"> LEARN MORE</a>
           </div>
         </div>
