updated mobile styles

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       <img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
 
-      <div style="font-family:'Tokyo-Outline'; text-align: center; font-size: 64px; margin-top: 10%":>FEATURED PROJECTS</div>
+      <div id="subtitle">FEATURED PROJECTS</div>
 
       <div id="projects">
 
@@ -65,6 +65,12 @@
             <div class="proj-details" style="color: #008f15">SUMMER 2019 | DELOITTE DIGITAL</div>
           </div>
           </div>
+
+          <div class="mobile-caption">
+            <div class="mobile-subtitle">L&D Portal</div>
+            <div class="proj-details">SUMMER 2019 | DELOITTE DIGITAL</div>
+            <div>Website through which employees request continuing education programs.</div>
+          </div>
         </a>
 
         <a class="section" href="rsvpd.html">
@@ -76,11 +82,17 @@
             <div class="proj-details" style="color: #b85400">FALL 2018 | CARNEGIE MELLON</div>
           </div>
           </div> 
+
+          <div class="mobile-caption">
+            <div class="mobile-subtitle">RSVP'D</div>
+            <div class="proj-details">FALL 2018 | CARNEGIE MELLON</div>
+            <div>Mobile app that helps event planners predict attendance by providing predictability, motivation, and accountability.</div>
+          </div>
         </a>
 
       </div>
 
-      <div id="button-wrapper" style="width: 100%; text-align:center; margin-bottom: 5%">
+      <div id="button-wrapper">
         <a href="archive.html" id="view-all-btn"> 
           VIEW ALL PROJECTS <i class="fa fa-long-arrow-right"></i>
         </a>
