--- a/about.html
+++ b/about.html
@@ -40,19 +40,20 @@
           <img src="pics/emily3.jpg" id="about-pic">
           
           <div id="about-description">
-            Hi there! If you want to know a little bit more about me, you’ve come to the right place. I'm originally from Mountain View, California, but I went to Carnegie Mellon in search of the East Coast experience. Little did I know, Pittsburgh is closer to Ohio than New York - but it's all good, we've got good pierogies.
+            Hi there! If you want to know a little bit more about me, you’ve come to the right place. I'm originally from Mountain View, California, went to Carnegie Mellon for undergrad, and I'm currently in Washington DC. Yes, I miss the perfect weather and cheap tacos - but the East Coast isn't half bad.
             <p>
-            My first exposure to anything remotely related to UI/UX was during my senior year in high school at <a href="http://www.freestyleacademy.rocks/">Freestyle Academy</a>, where I took Web/Audio Production and Graphic Design. I learned that I liked making pretty websites, and found a creative outlet that wasn't writing (my other passion in high school).
+            My first exposure to anything remotely related to UI/UX was during my senior year in high school at <a href="http://www.freestyleacademy.rocks/">Freestyle Academy</a>, where I took Web Production and Graphic Design. I learned that I liked making pretty websites, and found a creative outlet that wasn't writing (my other passion in high school).
             </p>
            <p>
-            During my first two years at CMU, I wanted to be a software engineer. It seemed like all the cool kids were doing it, and I liked coding. But by the beginning of my junior year, with an engineering internship and several CS classes under my belt, I realized that I didn't want to stare at a computer screen for 40 hours a week for the rest of my life. Throughout my junior year, I found the work I did in my HCI classes much more engaging and fun, so I decided to make the pivot to UX.
+            During my first two years at CMU, I wanted to be a software engineer. It seemed like all the cool kids were doing it, and I liked coding. But by the beginning of my junior year, with an engineering internship and several CS classes under my belt, I realized that I didn't want to stare at a computer screen for 40 hours a week for the rest of my life. Throughout my junior year, I found the work I did in my HCI classes much more engaging and fun, so I decided to make shift my career towards UX.
             </p>
             <p>
             My design (and life) philosophy is all about minimalism. Yes, I am a total fangirl of <a href="https://www.amazon.com/dp/B00KK0PICK/ref=dp-kindle-redirect?_encoding=UTF8&btkr=1">The Life-Changing Magic of Tidying Up</a>, but that doesn’t mean I only own one pair of shoes and live in a 200 square foot apartment. Rather, I firmly believe that “in anything at all, perfection is finally attained not when there is no longer anything to add, but when there is no longer anything to take away” (Antoine de Saint-Exupery).
             </p>
             <p>
-            In my free time, I like to run half marathons, cook, and fantasize about owning a Corgi. 
-<!--             I spent this past summer interning at <a href="https://www.deloittedigital.com/">Deloitte Digital</a> as a UX Designer in Arlington, VA, where I will return full time next fall! -->
+            Through the Government and Public Service (GPS) divison of Deloitte Digital, we work with federal and state government agencies to redesign and develop outdated systems and processes. I'm currently working on an enterprise web-based management system for a large federal agency. 
+            </p> 
+            In my free time, I like to lift weights, cook healthy(ish) food, and fantasize about owning a Corgi. 
             </p>
         </div>
       </div>
