updated rsvpd styles and home styles

--- a/index.html
+++ b/index.html
@@ -38,13 +38,20 @@
       <div id="nav"></div>
       <div id="home">
         <div id="home-text">
+
+        <div id="home-nav" style="float:right">   
+          <div class="nav-item-home" onclick="slideDown()"><b>PROJECTS</b></div>
+          <a class="nav-item-home" href="about.html"><b>ABOUT</b></a>
+          <a class="nav-item-home" href="resume.pdf"><b>RESUME</b></a>
+        </div>
+
           <div id="home-text-title">EMILY</div>
           <div id="home-text-title">PORAT</div>
           <div id="home-text-description">
             <p id="my-location"><i class="fa fa-map-marker"></i> Washington, DC</p>
-            <p>I'm a UX Designer at <a href="https://www.deloittedigital.com/">Deloitte Digital</a>, where we work with government agencies to modernize systems that matter.</p>
-            <p id="mobile-optional">Spreadsheets are my secret weapon, I can't leave a meeting without a list of action items, and my room is weirdly clean at all times. I take pleasure in getting sh*t done, and my goal in all my work is to help people do exactly that.</p>
-            <a href="resume.pdf" class="learn-about">Résumé</a>
+            <p class="intro">UX Designer at <a href="https://www.deloittedigital.com/">Deloitte Digital</a>, where we work with government agencies to modernize systems that matter.</p>
+            <p id="mobile-optional" class="intro">Spreadsheets are my secret weapon, I can't leave a meeting without a list of action items, and my room is weirdly clean at all times. I take pleasure in getting sh*t done, and my goal in all my work is to help people do exactly that.</p>
+<!--             <a href="resume.pdf" class="learn-about">Résumé</a> -->
           </div>
         </div>
         <img src="pics/arrow.png" id="arrow-down" onclick="slideDown()">
