--- a/l&d.html
+++ b/l&d.html
@@ -33,9 +33,12 @@
     <div id="nav"></div>
 	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
 	
-	  	<div class="page-title">Learning & Development Portal</div>
-	  	<div class="project-info">
-	  		Summer 2018 | Deloitte Digital Summer Internship 
+	  	<div class="title-wrapper">
+		  	<div class="page-title">Learning & Development Portal</div>
+		  	<div class="last"> <div class="short-divider" style="margin-bottom: 2%"></div></div>
+		  	<div class="project-info">
+		  		Summer 2018 • Deloitte Digital Summer Internship 
+		  	</div>
 	  	</div>
 	  	<img src="pics/l&d/requests.jpg" class="big-pic">
 	  	<div id="ld" class="margin-medium">
