--- a/miles.html
+++ b/miles.html
@@ -31,9 +31,11 @@
     	<div id="nav"></div>
 		<div id="miles" class="margin-medium">
 
+		<div class="title-wrapper">
 	  	<div class="page-title">MILES</div> 
 	  	<div class="project-info">
 	  		Fall 2017 | Interaction Design Overview | <a href="https://www.youtube.com/watch?v=uT68SYJpt50">Video</a>
+	  	</div>
 	  	</div>
 	  	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
 
