--- a/zensors.html
+++ b/zensors.html
@@ -32,8 +32,10 @@
     <div id="nav"></div>
 
 	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
-  	<div class="page-title">Zensors</div>
+  	<div class="title-wrapper">
+    <div class="page-title">Zensors</div>
   	<div class="project-info">Spring 2018 | HCI Undergraduate Research | <a href="https://www.zensors.com/">Website</a></div>
+    </div>
     <img src="pics/zensors/zensorsgray.jpg" class="big-pic">
   	<div id="zensors" class="margin-medium">
 	  	<div class="content">
