--- a/atlantis.html
+++ b/atlantis.html
@@ -31,11 +31,14 @@
     <meta name="viewport" content="width=device-width">
     <div id="nav"></div>
 	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
+	<div class="title-wrapper">
   	<div class="page-title">Atlantis Hub</div>
   	<div class="project-info">
   		Fall 2017 | Interaction Design Overview | <a href="https://www.youtube.com/watch?v=gH_H0uQTa00&feature=youtu.be" target="_blank">Video</a>
   	</div>
-  	<div class="big-pic" style="background-image: url(pics/atlantis/atlantis.jpg); "></div>
+  	</div>
+  	<img src="pics/atlantis/atlantis.jpg" style="width: 80%; padding:10%; background-color: #FEE469">
+  	<!-- <div class="big-pic" style="background-image: url(pics/atlantis/atlantis.jpg);"></div> -->
   	<div id="atlantis" class="margin-medium">
 	  	<div class="content">
 			<div class="context-summary">
