--- a/chutzpow.html
+++ b/chutzpow.html
@@ -30,9 +30,11 @@
   <body>
     <meta name="viewport" content="width=device-width">
     <div id="nav"></div>
+  	<div class="title-wrapper">
   	<div class="page-title">Chutz-Pow!</div>
   	<div class="project-info">
   		Spring 2018 | Information Systems Consulting Project | <a href="http://www.chutz-pow.org" target="_blank" ">Website</a>
+  	</div>
   	</div>
   	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
   	<img src="pics/chutzpow/titlegreen.png" class="big-pic">
