--- a/justharvest.html
+++ b/justharvest.html
@@ -33,8 +33,10 @@
     <div id="nav"></div>
 	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
 	
+	  	<div class="title-wrapper">
 	  	<div class="page-title">Just Harvest Community Table</div>
 	  	<div class="project-info">Spring 2019 | Service Design </div>
+	  	</div>
 	  	<img src="pics/justharvest/cover.jpg" class="big-pic">
 
 	  	<div id="justharvest" class="margin-medium">
