--- a/nav.html
+++ b/nav.html
@@ -1,10 +1,9 @@
 <div id="my-nav" class="nav-colored">
 	<a class="nav-logo" href="index.html">EMILY PORAT</a> 
 	<div id="nav-items">   
-		<a class="nav-item" id="home-nav-item" onclick="toggleNav()" href="index.html">PROJECTS</a>
+		<a class="nav-item" id="home-nav-item" href="index.html" onclick="toggleNav()">PROJECTS</a>
 		<a class="nav-item" href="about.html" onclick="toggleNav()">ABOUT</a>
 		<a class="nav-item" href="resume.pdf" onclick="toggleNav()">RESUME</a>
 	</div>
 	<div id="hamburger" class="fa fa-bars" onclick="toggleNav()"></div>
 </div>
- 
