--- a/newstagram.html
+++ b/newstagram.html
@@ -31,10 +31,12 @@
     <meta name="viewport" content="width=device-width">
     <div id="nav"></div>
 	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
-	
+		
+		<div class="title-wrapper">
 	  	<div class="page-title">Newstagram</div>
 	  	<div class="project-info">
 	  		Spring 2018 | Social Web | <a href="https://adobe.ly/2FygOXL" target="_blank">View the Prototype</a>
+	  	</div>
 	  	</div>
 	  	<img src="pics/newstagram/streamspurple.jpg" class="big-pic">
 
