--- a/atlantis.html
+++ b/atlantis.html
@@ -170,13 +170,11 @@
 			  </div>
 			</div>
 		  	<a href="justharvest.html" class="next-project" style="background-color: #FEE469; float: right; color: black"> 
-		  		COMMUNITY TABLE
-		  		<i class="fa fa-caret-right"></i>
+		  		COMMUNITY TABLE >
 		  	</a>
 
 		  	<a href="miles.html" class="next-project" style="background-color: #FEE469; float: left; color: black"> 
-		  		<i class="fa fa-caret-left"></i>
-		  		MILES
+		  		< MILES
 		  	</a>
 	  	</div>
 	</div>
