--- a/chutzpow.html
+++ b/chutzpow.html
@@ -165,13 +165,11 @@
 			</div>
 
 		  	<a href="newstagram.html" class="next-project" style="background-color: #18A398; float: right"> 
-		  		NEWSTAGRAM
-		  		<i class="fa fa-caret-right"></i>
+		  		NEWSTAGRAM >
 		  	</a>
 
 		  	<a href="zensors.html" class="next-project" onclick="openPage('newstagram.html')" style="background-color: #18A398; float: left"> 
-		  		<i class="fa fa-caret-left"></i>
-		  		ZENSORS
+		  		< ZENSORS
 		  	</a>
 	  	</div>
 
