--- a/justharvest.html
+++ b/justharvest.html
@@ -151,13 +151,11 @@
 			</div>
 
 		  	<a href="rsvpd.html" class="next-project" style="background-color: #f9f59c; color: black; float: right"> 
-		  		RSVPD
-		  		<i class="fa fa-caret-right"></i>
+		  		RSVPD >
 		  	</a>
 
 		  	<a href="atlantis.html" class="next-project" style="background-color: #f9f59c; color: black; float: left"> 
-		  		<i class="fa fa-caret-left"></i>
-		  		ATLANTIS HUB
+		  		< ATLANTIS HUB
 		  	</a>
 		  	</div>
 	  	</div>
