--- a/l&d.html
+++ b/l&d.html
@@ -267,13 +267,11 @@
 		</div>
 
 		  	<a href="zensors.html" class="next-project" style="background-color: #49ce5c; float: right"> 
-		  		ZENSORS
-		  		<i class="fa fa-caret-right"></i>
+		  		ZENSORS >
 		  	</a>
 
 		  	<a href="rsvpd.html" class="next-project" style="background-color: #49ce5c; float: left"> 
-		  		<i class="fa fa-caret-left"></i>
-		  		RSVPD
+		  		< RSVPD
 		  	</a>
 	  	</div>
   	</div>
