--- a/miles.html
+++ b/miles.html
@@ -201,13 +201,11 @@
 				</p>
 			</div>
 		  	<a href="atlantis.html" class="next-project" style="background-color: #2E8FEA; float: right"> 
-		  		ATLANTIS
-		  		<i class="fa fa-caret-right"></i>
+		  		ATLANTIS >
 		  	</a>
 
 		  	<a href="upark.html" class="next-project" style="background-color: #2E8FEA; float: left"> 
-		  		<i class="fa fa-caret-left"></i>
-		  		UPARK
+		  		< UPARK
 		  	</a>
 	  	</div>
 	  	</div>
