--- a/newstagram.html
+++ b/newstagram.html
@@ -133,13 +133,11 @@
 		</div>
 
 		  	<a href="upark.html" class="next-project" style="background-color: #662C92; float: right"> 
-		  		UPARK
-		  		<i class="fa fa-caret-right"></i>
+		  		UPARK >
 		  	</a>
 
 		  	<a href="chutzpow.html" class="next-project" style="background-color: #662C92; float: left"> 
-		  		<i class="fa fa-caret-left"></i>
-		  		CHUTZ-POW!
+		  		< CHUTZ-POW!
 		  	</a>
 
 	  	</div>
