--- a/rsvpd.html
+++ b/rsvpd.html
@@ -262,13 +262,11 @@
 
 	  	</div>
 		  	<a href="l&d.html" class="next-project" style="background-color: #ff943a; float: right"> 
-		  		L&D PORTAL
-		  		<i class="fa fa-caret-right"></i>
+		  		L&D PORTAL >
 		  	</a>
 
 		  	<a href="justharvest.html" class="next-project" style="background-color: #ff943a; float: left"> 
-		  		<i class="fa fa-caret-left"></i>
-		  		COMMUNITY TABLE
+		  		< COMMUNITY TABLE
 		  	</a>
 	  	</div>
   	</div>
