--- a/upark.html
+++ b/upark.html
@@ -155,14 +155,11 @@
 			  <img class="product-pic-medium" src="pics/upark/style.jpg" style="margin-right: 5%">
 			</div>
 		  	<a href="miles.html" class="next-project" style="background-color: #EE6B4D; float: right"> 
-		  		MILES
-		  		<i class="fa fa-caret-right"></i>
+		  		MILES >
 		  	</a>
 
 		  	<a href="newstagram.html" class="next-project" style="background-color: #EE6B4D; float: left"> 
-		  	
-		  		<i class="fa fa-caret-left"></i>
-		  		NEWSTAGRAM
+		  	< NEWSTAGRAM
 		  	</a>
 	  	</div>
 	  	<div id="footer"></div>
