--- a/zensors.html
+++ b/zensors.html
@@ -228,13 +228,11 @@
 		</div>
 
 			<a href="chutzpow.html" class="next-project" style="background-color: #33312E; float: right"> 
-		  		CHUTZ-POW
-          <i class="fa fa-caret-right"></i>
+		  		CHUTZ-POW >
 		  	</a>
 
 		  	<a href="l&d.html" class="next-project" style="background-color: #33312E; float: left"> 
-		  		<i class="fa fa-caret-left"></i> 
-          L&D PORTAL
+		  		< L&D PORTAL
 		  	</a>
 	  	</div>
 	</div>
